--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
     "express": "^4.16.4",
+    "express-basic-auth": "^1.2.0",
     "express-session": "^1.16.2",
     "http-errors": "~1.6.2",
     "morgan": "^1.9.1",
