--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "yt2text",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "start": "node ./bin/www",
     "watch": "nodemon --watch routes --watch views --watch public -e js,ejs,css ./bin/www"
