--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "type": "module",
+  "engines": {
+    "node": "12"
+  },
   "scripts": {
     "start": "node ./bin/www",
     "watch": "nodemon --watch routes --watch views --watch public -e js,ejs,css ./bin/www"
