--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "watch": "nodemon --watch routes --watch views --watch public -e js,ejs,css ./bin/www"
   },
   "dependencies": {
+    "@treeee/youtube-caption-extractor": "^1.5.5",
     "cookie-parser": "^1.4.6",
     "debug": "~4.3.4",
     "ejs": "~3.1.9",
@@ -18,8 +19,7 @@
     "express-basic-auth": "^1.2.1",
     "express-session": "^1.17.3",
     "http-errors": "~2.0.0",
-    "morgan": "^1.10.0",
-    "youtube-caption-extractor": "^1.4.3"
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "@flydotio/dockerfile": "^0.4.10",
